k8s/acs.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-web-app
  labels:
    app: my-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-web
  template:
    metadata:
      labels:
        app: my-web
        alibabacloud.com/compute-class: general-purpose
        alibabacloud.com/compute-qos: default
    spec:
      imagePullSecrets:
        - name: acr-secret

      containers:
        - name: web
          image: crpi-iao9ofa54ta9eu5t.cn-hangzhou.personal.cr.aliyuncs.com/lethe1020/nest-demo-app2:4-ee916e8b9884
          imagePullPolicy: IfNotPresent

          ports:
            - name: http
              containerPort: 3000

          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: 250m
              memory: 512Mi

          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 15

---
apiVersion: v1
kind: Service
metadata:
  name: my-web-service
  labels:
    app: my-web
  annotations:
    service.beta.kubernetes.io/alibaba-cloud-loadbalancer-protocol-port: "https:443,http:80"
    service.beta.kubernetes.io/alibaba-cloud-loadbalancer-cert-id: "1804648827704986_19f8e6ac696_-864300380_837105403"
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      targetPort: 3000
    - name: https
      port: 443
      targetPort: 3000
  selector:
    app: my-web
